--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "element-ui": "^2.4.7",
     "standard": "^12.0.1",
     "vue": "^2.5.2",
+    "vue-cookies": "^1.5.7",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
