--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.5.2",
     "vue-cookies": "^1.5.7",
     "vue-router": "^3.0.1",
+    "vue-schart": "^1.0.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
