--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   },
   "dependencies": {
     "element-ui": "^2.4.7",
+    "highcharts": "^6.2.0",
     "standard": "^12.0.1",
     "vue": "^2.5.2",
     "vue-cookies": "^1.5.7",
     "vue-router": "^3.0.1",
-    "vue-schart": "^1.0.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
